--- a/index.html
+++ b/index.html
@@ -33,15 +33,22 @@
     </div>
 
 
-  
+  <!-- main disply  -->
     <div class="dashboard">
       
-      <div class="content">
+      <div class="">
           <div class="location-info">
               <h2>Colombo</h2>
               <p>Sunday</p>
           </div>
-          <div class="forecast">
+
+          <div class="current-weather">
+            <h1>20°C</h1>
+            <p>Mostly Cloudy</p>
+            <p class="time">11:11:11 AM</p>
+        </div>
+
+          <div class=" content forecast">
               <ul>
                   <li><span>Today</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
                   <li><span>Mon</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
@@ -52,11 +59,7 @@
                   <li><span>Sat</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
               </ul>
           </div>
-          <div class="current-weather">
-              <h1>20°C</h1>
-              <p>Mostly Cloudy</p>
-              <p class="time">11:11:11 AM</p>
-          </div>
+          
       </div>
   </div>
 
