--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="current-weather">
                 <h1>20°C</h1>
-                <p>Mostly Cloudy</p>
+                <p class="most-cloudy">Mostly Cloudy</p>
             </div>
         </div>
 
@@ -65,6 +65,60 @@
         </div>
         
     </div>
+</div>
+
+<hr> <h2> current Weather</h2> <hr>
+
+<!-- card code -->
+<!-- <div class="card" style="width: 18rem;">
+  <img src="Wether img/cloudy.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Cloudy</p>
+  </div>
+</div> -->
+
+<div class="container-fluid ">
+
+  <div class="order-card col-4">
+    <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="...">
+    <hr>
+    <p>Cloudy</p>    
+  </div>
+
+  <div class="order-card col-4">
+    <img src="Wether img/lighting.png" class="card-img-top" alt="...">
+    <hr>
+    <p>lighting</p> 
+  </div>
+
+  <div class="order-card col-4">
+    <img src="Wether img/night-wind.png" class="card-img-top" alt="...">
+    <hr>
+    <p>Night-wind</p>
+  </div>
+  
+</div>
+
+<div class="container-fluid">
+
+  <div class="order-card">
+    <img src="Wether img/cloudy.png" class="card-img-top" alt="...">
+    <hr>
+    <p>Cloudy</p>    
+  </div>
+
+  <div class="order-card">
+    <img src="Wether img/lighting.png" class="card-img-top" alt="...">
+    <hr>
+    <p>lighting</p> 
+  </div>
+
+  <div class="order-card">
+    <img src="Wether img/night-wind.png" class="card-img-top" alt="...">
+    <hr>
+    <p>Night-wind</p>
+  </div>
+  
 </div>
 
     <script src="app.js"></script>
