--- a/index.html
+++ b/index.html
@@ -69,56 +69,28 @@
 
 <hr> <h2> current Weather</h2> <hr>
 
-<!-- card code -->
-<!-- <div class="card" style="width: 18rem;">
-  <img src="Wether img/cloudy.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Cloudy</p>
-  </div>
-</div> -->
+<div class="container-fluid text-center">
+  <div class="row">
 
-<div class="container-fluid ">
+    <div class="col order-card">
+      <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="...">
+      <hr>
+      <p>Cloudy</p>    
+    </div>
 
-  <div class="order-card col-4">
-    <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="...">
-    <hr>
-    <p>Cloudy</p>    
-  </div>
-
-  <div class="order-card col-4">
-    <img src="Wether img/lighting.png" class="card-img-top" alt="...">
+     <div class="col order-card">
+    <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="...">
     <hr>
     <p>lighting</p> 
-  </div>
+    </div>
 
-  <div class="order-card col-4">
-    <img src="Wether img/night-wind.png" class="card-img-top" alt="...">
-    <hr>
-    <p>Night-wind</p>
-  </div>
-  
-</div>
+    <div class="col order-card">
+      <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="...">
+      <hr>
+      <p>Night-wind</p>
+    </div>
 
-<div class="container-fluid">
-
-  <div class="order-card">
-    <img src="Wether img/cloudy.png" class="card-img-top" alt="...">
-    <hr>
-    <p>Cloudy</p>    
   </div>
-
-  <div class="order-card">
-    <img src="Wether img/lighting.png" class="card-img-top" alt="...">
-    <hr>
-    <p>lighting</p> 
-  </div>
-
-  <div class="order-card">
-    <img src="Wether img/night-wind.png" class="card-img-top" alt="...">
-    <hr>
-    <p>Night-wind</p>
-  </div>
-  
 </div>
 
     <script src="app.js"></script>
