--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<hr> <h2> current Weather</h2> <hr>
+<h2> current Weather</h2>
 
 <div class="container-fluid text-center">
   <div class="row">
