card changes added

--- a/index.html
+++ b/index.html
@@ -69,27 +69,61 @@
 
 <h2> current Weather</h2>
 
-<div class="container-fluid text-center">
+<!-- <div class="container-fluid text-center">
   <div class="row">
 
-    <div class="col order-card">
-      <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="...">
-      <hr>
-      <p>Cloudy</p>    
+    <div class="col-md-4">
+      <div class="order-card">
+        <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="...">
+        <hr>
+        <p>Cloudy</p>    
+      </div>
     </div>
 
-     <div class="col order-card">
-    <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="...">
-    <hr>
-    <p>lighting</p> 
+    <div class="col-md-4 ">
+      <div class="order-card">
+        <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="...">
+        <hr>
+        <p>lighting</p> 
+      </div>
+    </div>
+    
+    <div class="col-md-4">
+      <div class="order-card">
+        <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="...">
+        <hr>
+        <p>Night-wind</p>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="container-fluid text-center">
+  <div class="row justify-content-center">
+
+    <div class="col-md-4 mb-4">
+      <div class="order-card">
+        <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="Cloudy">
+        <hr>
+        <p>Cloudy</p>    
+      </div>
     </div>
 
-    <div class="col order-card">
-      <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="...">
-      <hr>
-      <p>Night-wind</p>
+    <div class="col-md-4 mb-4">
+      <div class="order-card">
+        <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="Lighting">
+        <hr>
+        <p>Lighting</p> 
+      </div>
     </div>
 
+    <div class="col-md-4 mb-4">
+      <div class="order-card">
+        <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="Night-wind">
+        <hr>
+        <p>Night-wind</p>
+      </div>
+    </div>
   </div>
 </div>
 
