--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Weather</title>
 
     <link rel="stylesheet" href="style.css">
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="body">
     
     <h1>Weather</h1>
 
@@ -67,36 +67,7 @@
     </div>
 </div>
 
-<h2> current Weather</h2>
-
-<!-- <div class="container-fluid text-center">
-  <div class="row">
-
-    <div class="col-md-4">
-      <div class="order-card">
-        <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="...">
-        <hr>
-        <p>Cloudy</p>    
-      </div>
-    </div>
-
-    <div class="col-md-4 ">
-      <div class="order-card">
-        <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="...">
-        <hr>
-        <p>lighting</p> 
-      </div>
-    </div>
-    
-    <div class="col-md-4">
-      <div class="order-card">
-        <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="...">
-        <hr>
-        <p>Night-wind</p>
-      </div>
-    </div>
-  </div>
-</div> -->
+<h2 class="mt-5"> current Weather</h2>
 
 <div class="container-fluid text-center">
   <div class="row justify-content-center">
@@ -105,7 +76,7 @@
       <div class="order-card">
         <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="Cloudy">
         <hr>
-        <p>Cloudy</p>    
+        <b><p>Cloudy</p></b>  
       </div>
     </div>
 
@@ -113,7 +84,7 @@
       <div class="order-card">
         <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="Lighting">
         <hr>
-        <p>Lighting</p> 
+        <b><p>Lighting</p> </b>
       </div>
     </div>
 
@@ -121,7 +92,34 @@
       <div class="order-card">
         <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="Night-wind">
         <hr>
-        <p>Night-wind</p>
+         <b><p>Night-wind</p></b>
+      </div>
+    </div>
+  </div>
+
+  <div class="row justify-content-center">
+
+    <div class="col-md-4 mb-4">
+      <div class="order-card">
+        <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="night-wind">
+        <hr>
+        <b><p>night-wind</p></b>  
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-4">
+      <div class="order-card">
+        <img src="Wether img/storm.png" class="card-img-top cardImg" alt="storm">
+        <hr>
+        <b><p>storm</p> </b>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-4">
+      <div class="order-card">
+        <img src="Wether img/windy.png" class="card-img-top cardImg" alt="windy">
+        <hr>
+         <b><p>windy</p></b>
       </div>
     </div>
   </div>
