--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="body">
     
-    <h1>Weather</h1>
+    <h1 class="mt-5">Weather</h1>
 
     <div class="search-header">
       <div class="search-header__wrapper">
@@ -35,7 +35,7 @@
 
   <!-- main disply  -->
 
-  <div class="dashboard">
+  <div class="container-fluid dashboard">
     <div class="content">
         <div class="left-side">
             <div class="location-info">
@@ -59,7 +59,7 @@
                 <li><span>Fri</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
                 <li><span>Sat</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
             </ul>
-            <div class="time-container">
+            <div class="time-container mt-3">
                 <p class="time">11:11:11 AM</p>
             </div>
         </div>
@@ -67,10 +67,12 @@
     </div>
 </div>
 
-<h2 class="mt-5"> current Weather</h2>
+
+<!-- Curent weather card code -->
+<h2 class="mt-5"> Current Weather</h2>
 
 <div class="container-fluid text-center">
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-4">
 
     <div class="col-md-4 mb-4">
       <div class="order-card">
@@ -97,13 +99,13 @@
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-4">
 
     <div class="col-md-4 mb-4">
       <div class="order-card">
-        <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="night-wind">
+        <img src="Wether img/partly-cloudy.png" class="card-img-top cardImg" alt="Cloud-lighting">
         <hr>
-        <b><p>night-wind</p></b>  
+        <b><p>Cloud-lighting</p></b>  
       </div>
     </div>
 
@@ -111,7 +113,7 @@
       <div class="order-card">
         <img src="Wether img/storm.png" class="card-img-top cardImg" alt="storm">
         <hr>
-        <b><p>storm</p> </b>
+        <b><p>Storm</p> </b>
       </div>
     </div>
 
@@ -119,11 +121,13 @@
       <div class="order-card">
         <img src="Wether img/windy.png" class="card-img-top cardImg" alt="windy">
         <hr>
-         <b><p>windy</p></b>
+         <b><p>Windy</p></b>
       </div>
     </div>
   </div>
 </div>
+
+
 
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
