--- a/index.html
+++ b/index.html
@@ -1,137 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather</title>
+
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body class="body">
-    
-    <h1 class="mt-5">Weather</h1>
 
-    <div class="search-header">
-      <div class="search-header__wrapper">
-        <input placeholder="Search" class="search-header__input" type="text" />
-        <button class="search-header__button">
-          <svg
-            viewBox="0 0 18 18"
-            height="18"
-            width="18"
-            class="search-header__icon"
-          >
-            <path
-              fill="#3A3A3A"
-              d="M7.132 0C3.197 0 0 3.124 0 6.97c0 3.844 3.197 6.969 7.132 6.969 1.557 0 2.995-.49 4.169-1.32L16.82 18 18 16.847l-5.454-5.342a6.846 6.846 0 0 0 1.718-4.536C14.264 3.124 11.067 0 7.132 0zm0 .82c3.48 0 6.293 2.748 6.293 6.15 0 3.4-2.813 6.149-6.293 6.149S.839 10.37.839 6.969C.839 3.568 3.651.82 7.132.82z"
-            ></path>
-          </svg>
-        </button>
-      </div>
+<body class="body">
+
+  <h1 class="mt-5">Weather</h1>
+
+  <div class="search-header">
+    <div class="search-header__wrapper">
+      <input placeholder="Search" class="search-header__input" type="text" />
+      <button class="search-header__button">
+        <svg viewBox="0 0 18 18" height="18" width="18" class="search-header__icon">
+          <path fill="#3A3A3A"
+            d="M7.132 0C3.197 0 0 3.124 0 6.97c0 3.844 3.197 6.969 7.132 6.969 1.557 0 2.995-.49 4.169-1.32L16.82 18 18 16.847l-5.454-5.342a6.846 6.846 0 0 0 1.718-4.536C14.264 3.124 11.067 0 7.132 0zm0 .82c3.48 0 6.293 2.748 6.293 6.15 0 3.4-2.813 6.149-6.293 6.149S.839 10.37.839 6.969C.839 3.568 3.651.82 7.132.82z">
+          </path>
+        </svg>
+      </button>
     </div>
+  </div>
 
 
   <!-- main disply  -->
 
   <div class="container-fluid dashboard">
     <div class="content">
-        <div class="left-side">
-            <div class="location-info">
-                <h2>Colombo</h2>
-                <p>Sunday</p>
-            </div>
-
-            <div class="current-weather">
-                <h1>20°C</h1>
-                <p class="most-cloudy">Mostly Cloudy</p>
-            </div>
+      <div class="left-side">
+        <div class="location-info">
+          <h2>Colombo</h2>
+          <p>Sunday</p>
         </div>
 
-        <div class="forecast">
-            <ul>
-                <li><span>Today</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-                <li><span>Mon</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-                <li><span>Tue</span> <span>☁️ Cloud</span> <span>18/10/2024</span></li>
-                <li><span>Wed</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-                <li><span>Thu</span> <span>⛈️ Storm</span> <span>18/10/2024</span></li>
-                <li><span>Fri</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-                <li><span>Sat</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-            </ul>
-            <div class="time-container mt-3">
-                <p class="time">11:11:11 AM</p>
-            </div>
+        <div class="current-weather">
+          <h1>20°C</h1>
+          <p class="most-cloudy">Mostly Cloudy</p>
         </div>
-        
+      </div>
+
+      <div class="forecast">
+        <ul>
+          <li><span>Today</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
+          <li><span>Mon</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
+          <li><span>Tue</span> <span>☁️ Cloud</span> <span>18/10/2024</span></li>
+          <li><span>Wed</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
+          <li><span>Thu</span> <span>⛈️ Storm</span> <span>18/10/2024</span></li>
+          <li><span>Fri</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
+          <li><span>Sat</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
+        </ul>
+        <div class="time-container mt-3">
+          <p class="time">11:11:11 AM</p>
+        </div>
+      </div>
+
     </div>
-</div>
+  </div>
 
 
-<!-- Curent weather card code -->
-<h2 class="mt-5"> Current Weather</h2>
+  <!-- Curent weather card code -->
+  <h2 class="mt-5"> Current Weather</h2>
 
-<div class="container-fluid text-center">
-  <div class="row justify-content-center mt-4">
+  <div class="container-fluid text-center">
+    <div class="row justify-content-center mt-4">
 
-    <div class="col-md-4 mb-4">
-      <div class="order-card">
-        <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="Cloudy">
-        <hr>
-        <b><p>Cloudy</p></b>  
+      <div class="col-md-4 mb-4">
+        <div class="order-card">
+          <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="Cloudy">
+          <hr>
+          <b>
+            <p>Cloudy</p>
+          </b>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="order-card">
+          <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="Lighting">
+          <hr>
+          <b>
+            <p>Lighting</p>
+          </b>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="order-card">
+          <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="Night-wind">
+          <hr>
+          <b>
+            <p>Night-wind</p>
+          </b>
+        </div>
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="order-card">
-        <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="Lighting">
-        <hr>
-        <b><p>Lighting</p> </b>
-      </div>
-    </div>
+    <div class="row justify-content-center mt-4">
 
-    <div class="col-md-4 mb-4">
-      <div class="order-card">
-        <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="Night-wind">
-        <hr>
-         <b><p>Night-wind</p></b>
+      <div class="col-md-4 mb-4">
+        <div class="order-card">
+          <img src="Wether img/partly-cloudy.png" class="card-img-top cardImg" alt="Cloud-lighting">
+          <hr>
+          <b>
+            <p>Cloud-lighting</p>
+          </b>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="order-card">
+          <img src="Wether img/storm.png" class="card-img-top cardImg" alt="storm">
+          <hr>
+          <b>
+            <p>Storm</p>
+          </b>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="order-card">
+          <img src="Wether img/windy.png" class="card-img-top cardImg" alt="windy">
+          <hr>
+          <b>
+            <p>Windy</p>
+          </b>
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="row justify-content-center mt-4">
 
-    <div class="col-md-4 mb-4">
-      <div class="order-card">
-        <img src="Wether img/partly-cloudy.png" class="card-img-top cardImg" alt="Cloud-lighting">
-        <hr>
-        <b><p>Cloud-lighting</p></b>  
+  <div class="container-fluid">
+    <div class="wheatherUpdate mt-5">
+      <div class="WUpdate">
+
+        <div class="row mt-3">
+
+          <div class="col">
+            <span>Location</span>
+          </div>
+          <!-- location input desplay  -->
+
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-3">
+
+          <div class="col">
+            <span>Temperatures</span>
+          </div>
+          <!-- Temperatures input desplay  -->
+
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <!-- 
+        <li><span>Humidity</span> <span>......</span></li>
+        <li><span>Wind Speed</span> <span>......</span></li>
+        <li><span>Conditions</span> <span>......</span></li>
+        <li><span>Region</span> <span>......</span></li>
+        <li><span>Country</span> <span>......</span></li>
+        <li><span>Longitude</span> <span>......</span></li> 
+       -->
       </div>
     </div>
 
-    <div class="col-md-4 mb-4">
-      <div class="order-card">
-        <img src="Wether img/storm.png" class="card-img-top cardImg" alt="storm">
-        <hr>
-        <b><p>Storm</p> </b>
-      </div>
-    </div>
-
-    <div class="col-md-4 mb-4">
-      <div class="order-card">
-        <img src="Wether img/windy.png" class="card-img-top cardImg" alt="windy">
-        <hr>
-         <b><p>Windy</p></b>
-      </div>
-    </div>
   </div>
-</div>
-
-
-
-    <script src="app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </div>
+  <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
