aded weather input

--- a/index.html
+++ b/index.html
@@ -141,13 +141,11 @@
     <div class="wheatherUpdate mt-5">
       <div class="WUpdate">
 
+        <!-- location input desplay  -->
         <div class="row mt-3">
-
           <div class="col">
             <span>Location</span>
           </div>
-          <!-- location input desplay  -->
-
           <div class="col">
             <div class="wave-group">
               <input required="" type="text" class="input">
@@ -162,13 +160,12 @@
           </div>
         </div>
 
-        <div class="row mt-3">
 
+        <!-- Temperatures input desplay  -->
+        <div class="row mt-3">
           <div class="col">
             <span>Temperatures</span>
           </div>
-          <!-- Temperatures input desplay  -->
-
           <div class="col">
             <div class="wave-group">
               <input required="" type="text" class="input">
@@ -183,14 +180,141 @@
           </div>
         </div>
 
-        <!-- 
-        <li><span>Humidity</span> <span>......</span></li>
-        <li><span>Wind Speed</span> <span>......</span></li>
-        <li><span>Conditions</span> <span>......</span></li>
-        <li><span>Region</span> <span>......</span></li>
-        <li><span>Country</span> <span>......</span></li>
-        <li><span>Longitude</span> <span>......</span></li> 
-       -->
+
+        <!-- Humidity input desplay  -->
+        <div class="row mt-3">
+          <div class="col">
+            <span>Humidity</span>
+          </div>
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- Wind Speed input desplay  -->
+        <div class="row mt-3">
+          <div class="col">
+            <span>Wind Speed</span>
+          </div>
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <!-- Wind Speed input desplay  -->
+        <div class="row mt-3">
+          <div class="col">
+            <span>Wind Speed</span>
+          </div>
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- Conditions input desplay  -->
+        <div class="row mt-3">
+          <div class="col">
+            <span>Conditions</span>
+          </div>
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <!-- Region input desplay  -->
+        <div class="row mt-3">
+          <div class="col">
+            <span>Region</span>
+          </div>
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <!-- Country input desplay  -->
+        <div class="row mt-3">
+          <div class="col">
+            <span>Country</span>
+          </div>
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <!-- Longitude input desplay  -->
+        <div class="row mt-3">
+          <div class="col">
+            <span>Longitude</span>
+          </div>
+          <div class="col">
+            <div class="wave-group">
+              <input required="" type="text" class="input">
+              <span class="bar"></span>
+              <label class="label">
+                <span class="label-char" style="--index: 0">N</span>
+                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 2">m</span>
+                <span class="label-char" style="--index: 3">e</span>
+              </label>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
