input chages added

--- a/index.html
+++ b/index.html
@@ -151,10 +151,14 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
-                <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 0">L</span>
+                <span class="label-char" style="--index: 1">o</span>
+                <span class="label-char" style="--index: 2">c</span>
+                <span class="label-char" style="--index: 3">a</span>
+                <span class="label-char" style="--index: 4">t</span>
+                <span class="label-char" style="--index: 5">i</span>
+                <span class="label-char" style="--index: 6">o</span>
+                <span class="label-char" style="--index: 7">n</span>
               </label>
             </div>
           </div>
@@ -171,10 +175,18 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 0">T</span>
+                <span class="label-char" style="--index: 1">e</span>
                 <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 3">p</span>
+                <span class="label-char" style="--index: 4">e</span>
+                <span class="label-char" style="--index: 5">r</span>
+                <span class="label-char" style="--index: 6">a</span>
+                <span class="label-char" style="--index: 7">t</span>
+                <span class="label-char" style="--index: 8">u</span>
+                <span class="label-char" style="--index: 9">r</span>
+                <span class="label-char" style="--index: 10">e</span>
+                <span class="label-char" style="--index: 11">s</span>
               </label>
             </div>
           </div>
@@ -191,10 +203,14 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
+                <span class="label-char" style="--index: 0">H</span>
+                <span class="label-char" style="--index: 1">u</span>
                 <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 3">i</span>
+                <span class="label-char" style="--index: 4">d</span>
+                <span class="label-char" style="--index: 5">i</span>
+                <span class="label-char" style="--index: 6">t</span>
+                <span class="label-char" style="--index: 7">y</span>
               </label>
             </div>
           </div>
@@ -211,29 +227,15 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
-                <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
-              </label>
-            </div>
-          </div>
-        </div>
-
-        <!-- Wind Speed input desplay  -->
-        <div class="row mt-3">
-          <div class="col">
-            <span>Wind Speed</span>
-          </div>
-          <div class="col">
-            <div class="wave-group">
-              <input required="" type="text" class="input">
-              <span class="bar"></span>
-              <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
-                <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 0">W</span>
+                <span class="label-char" style="--index: 1">i</span>
+                <span class="label-char" style="--index: 2">n</span>
+                <span class="label-char" style="--index: 3">d</span>
+                <span class="label-char" style="--index: 4">S</span>
+                <span class="label-char" style="--index: 5">p</span>
+                <span class="label-char" style="--index: 6">e</span>
+                <span class="label-char" style="--index: 7">e</span>
+                <span class="label-char" style="--index: 8">d</span>
               </label>
             </div>
           </div>
@@ -250,10 +252,16 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
-                <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 0">C</span>
+                <span class="label-char" style="--index: 1">o</span>
+                <span class="label-char" style="--index: 2">n</span>
+                <span class="label-char" style="--index: 3">d</span>
+                <span class="label-char" style="--index: 4">i</span>
+                <span class="label-char" style="--index: 5">t</span>
+                <span class="label-char" style="--index: 6">i</span>
+                <span class="label-char" style="--index: 7">o</span>
+                <span class="label-char" style="--index: 8">n</span>
+                <span class="label-char" style="--index: 9">s</span>
               </label>
             </div>
           </div>
@@ -269,10 +277,12 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
-                <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 0">R</span>
+                <span class="label-char" style="--index: 1">e</span>
+                <span class="label-char" style="--index: 2">g</span>
+                <span class="label-char" style="--index: 3">i</span>
+                <span class="label-char" style="--index: 4">o</span>
+                <span class="label-char" style="--index: 5">n</span>
               </label>
             </div>
           </div>
@@ -288,10 +298,13 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
-                <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 0">C</span>
+                <span class="label-char" style="--index: 1">o</span>
+                <span class="label-char" style="--index: 2">u</span>
+                <span class="label-char" style="--index: 3">n</span>
+                <span class="label-char" style="--index: 4">t</span>
+                <span class="label-char" style="--index: 5">r</span>
+                <span class="label-char" style="--index: 6">y</span>
               </label>
             </div>
           </div>
@@ -307,19 +320,24 @@
               <input required="" type="text" class="input">
               <span class="bar"></span>
               <label class="label">
-                <span class="label-char" style="--index: 0">N</span>
-                <span class="label-char" style="--index: 1">a</span>
-                <span class="label-char" style="--index: 2">m</span>
-                <span class="label-char" style="--index: 3">e</span>
+                <span class="label-char" style="--index: 0">L</span>
+                <span class="label-char" style="--index: 1">o</span>
+                <span class="label-char" style="--index: 2">n</span>
+                <span class="label-char" style="--index: 3">g</span>
+                <span class="label-char" style="--index: 4">i</span>
+                <span class="label-char" style="--index: 5">t</span>
+                <span class="label-char" style="--index: 6">u</span>
+                <span class="label-char" style="--index: 7">d</span>
+                <span class="label-char" style="--index: 8">e</span>
               </label>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  </div>
 
-  </div>
-  </div>
   <script src="app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
