all new changes added

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
   <h2 class="mt-5"> Current Weather</h2>
 
   <div class="container-fluid text-center">
-    <div class="row justify-content-center mt-4">
-
-      <div class="col-md-4 mb-4">
+    <div class="row mt-4 cardrow justify-content-center">
+  
+      <div class="col-md-4 mb-4 d-flex justify-content-center">
         <div class="order-card">
           <img src="Wether img/cloudy.png" class="card-img-top cardImg" alt="Cloudy">
           <hr>
@@ -80,8 +80,8 @@
           </b>
         </div>
       </div>
-
-      <div class="col-md-4 mb-4">
+  
+      <div class="col-md-4 mb-4 d-flex justify-content-center">
         <div class="order-card">
           <img src="Wether img/lighting.png" class="card-img-top cardImg" alt="Lighting">
           <hr>
@@ -90,8 +90,8 @@
           </b>
         </div>
       </div>
-
-      <div class="col-md-4 mb-4">
+  
+      <div class="col-md-4 mb-4 d-flex justify-content-center">
         <div class="order-card">
           <img src="Wether img/night-wind.png" class="card-img-top cardImg" alt="Night-wind">
           <hr>
@@ -101,10 +101,10 @@
         </div>
       </div>
     </div>
-
+  
     <div class="row justify-content-center mt-4">
-
-      <div class="col-md-4 mb-4">
+  
+      <div class="col-md-4 mb-4 d-flex justify-content-center">
         <div class="order-card">
           <img src="Wether img/partly-cloudy.png" class="card-img-top cardImg" alt="Cloud-lighting">
           <hr>
@@ -113,8 +113,8 @@
           </b>
         </div>
       </div>
-
-      <div class="col-md-4 mb-4">
+  
+      <div class="col-md-4 mb-4 d-flex justify-content-center">
         <div class="order-card">
           <img src="Wether img/storm.png" class="card-img-top cardImg" alt="storm">
           <hr>
@@ -123,8 +123,8 @@
           </b>
         </div>
       </div>
-
-      <div class="col-md-4 mb-4">
+  
+      <div class="col-md-4 mb-4 d-flex justify-content-center">
         <div class="order-card">
           <img src="Wether img/windy.png" class="card-img-top cardImg" alt="windy">
           <hr>
@@ -135,7 +135,7 @@
       </div>
     </div>
   </div>
-
+  
 
   <div class="container-fluid">
     <div class="wheatherUpdate mt-5">
@@ -144,7 +144,7 @@
         <!-- location input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Location</span>
+            <!-- <span>Location</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
@@ -168,7 +168,7 @@
         <!-- Temperatures input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Temperatures</span>
+            <!-- <span>Temperatures</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
@@ -196,7 +196,7 @@
         <!-- Humidity input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Humidity</span>
+            <!-- <span>Humidity</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
@@ -220,7 +220,7 @@
         <!-- Wind Speed input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Wind Speed</span>
+            <!-- <span>Wind Speed</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
@@ -245,7 +245,7 @@
         <!-- Conditions input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Conditions</span>
+            <!-- <span>Conditions</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
@@ -270,7 +270,7 @@
         <!-- Region input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Region</span>
+            <!-- <span>Region</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
@@ -291,7 +291,7 @@
         <!-- Country input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Country</span>
+            <!-- <span>Country</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
@@ -313,7 +313,7 @@
         <!-- Longitude input desplay  -->
         <div class="row mt-3">
           <div class="col">
-            <span>Longitude</span>
+            <!-- <span>Longitude</span> -->
           </div>
           <div class="col">
             <div class="wave-group">
