--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="forecast">
         <ul>
-          <li><span>Today</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
+          <li><span>Today</span> <span>☀️ Sunny</span><p id="date"></p></li>
           <li><span>Mon</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
           <li><span>Tue</span> <span>☁️ Cloud</span> <span>18/10/2024</span></li>
           <li><span>Wed</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
@@ -56,9 +56,13 @@
           <li><span>Fri</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
           <li><span>Sat</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
         </ul>
-        <div class="time-container mt-3">
-          <p class="time">11:11:11 AM</p>
+
+        <!-- calulating date & time -->
+        <div clss="clock">
+          <p id="date"></p>
+          <p id="time" class="clock"></p>
         </div>
+
       </div>
 
     </div>
