--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <h2 class="mt-5"> Current Weather</h2>
 
 
+ 
   <div class="container-fluid">
     <div class="wheatherUpdate mt-5 container-fluid m-lg-auto m-md-auto m-sm-auto ">
       <div class="WUpdate container-fluid m-lg-auto m-md-auto m-sm-auto ">
@@ -80,9 +81,9 @@
           <!-- Location input desplay  -->
           <div class="col container-fluid m-lg-auto m-md-auto m-sm-auto ">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="tz_id"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">L</span>
                 <span class="label-char" style="--index: 1">o</span>
                 <span class="label-char" style="--index: 2">c</span>
@@ -91,7 +92,7 @@
                 <span class="label-char" style="--index: 5">i</span>
                 <span class="label-char" style="--index: 6">o</span>
                 <span class="label-char" style="--index: 7">n</span>
-              </label>
+              </label> -->
             </div>
           </div>
         </div>
@@ -102,9 +103,9 @@
 
           <div class="col">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="temp_c"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">T</span>
                 <span class="label-char" style="--index: 1">e</span>
                 <span class="label-char" style="--index: 2">m</span>
@@ -117,7 +118,7 @@
                 <span class="label-char" style="--index: 9">r</span>
                 <span class="label-char" style="--index: 10">e</span>
                 <span class="label-char" style="--index: 11">s</span>
-              </label>
+              </label> -->
             </div>
           </div>
         </div>
@@ -128,9 +129,9 @@
 
           <div class="col">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="humidity"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">H</span>
                 <span class="label-char" style="--index: 1">u</span>
                 <span class="label-char" style="--index: 2">m</span>
@@ -139,7 +140,7 @@
                 <span class="label-char" style="--index: 5">i</span>
                 <span class="label-char" style="--index: 6">t</span>
                 <span class="label-char" style="--index: 7">y</span>
-              </label>
+              </label> -->
             </div>
           </div>
         </div>
@@ -150,9 +151,9 @@
 
           <div class="col">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="wind_kph"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">W</span>
                 <span class="label-char" style="--index: 1">i</span>
                 <span class="label-char" style="--index: 2">n</span>
@@ -162,7 +163,7 @@
                 <span class="label-char" style="--index: 6">e</span>
                 <span class="label-char" style="--index: 7">e</span>
                 <span class="label-char" style="--index: 8">d</span>
-              </label>
+              </label> -->
             </div>
           </div>
         </div>
@@ -172,9 +173,9 @@
 
           <div class="col">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="url"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">C</span>
                 <span class="label-char" style="--index: 1">o</span>
                 <span class="label-char" style="--index: 2">n</span>
@@ -185,7 +186,7 @@
                 <span class="label-char" style="--index: 7">o</span>
                 <span class="label-char" style="--index: 8">n</span>
                 <span class="label-char" style="--index: 9">s</span>
-              </label>
+              </label> -->
             </div>
           </div>
         </div>
@@ -195,16 +196,16 @@
 
           <div class="col">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="region"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">R</span>
                 <span class="label-char" style="--index: 1">e</span>
                 <span class="label-char" style="--index: 2">g</span>
                 <span class="label-char" style="--index: 3">i</span>
                 <span class="label-char" style="--index: 4">o</span>
                 <span class="label-char" style="--index: 5">n</span>
-              </label>
+              </label> -->
             </div>
           </div>
         </div>
@@ -214,9 +215,9 @@
 
           <div class="col">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="country"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">C</span>
                 <span class="label-char" style="--index: 1">o</span>
                 <span class="label-char" style="--index: 2">u</span>
@@ -224,7 +225,7 @@
                 <span class="label-char" style="--index: 4">t</span>
                 <span class="label-char" style="--index: 5">r</span>
                 <span class="label-char" style="--index: 6">y</span>
-              </label>
+              </label> -->
             </div>
           </div>
         </div>
@@ -234,9 +235,9 @@
 
           <div class="col">
             <div class="wave-group">
-              <input required="" type="text" class="input" id="txtserch">
+              <label for="" id="lon"></label>
               <span class="bar"></span>
-              <label class="label">
+              <!-- <label class="label">
                 <span class="label-char" style="--index: 0">L</span>
                 <span class="label-char" style="--index: 1">o</span>
                 <span class="label-char" style="--index: 2">n</span>
@@ -246,14 +247,36 @@
                 <span class="label-char" style="--index: 6">u</span>
                 <span class="label-char" style="--index: 7">d</span>
                 <span class="label-char" style="--index: 8">e</span>
-              </label>
+              </label> -->
             </div>
           </div>
+
+          <div class="row mt-3">
+
+            <div class="col">
+              <div class="wave-group">
+                <label for="" id="lan"></label>
+                <span class="bar"></span>
+                <!-- <label class="label">
+                  <span class="label-char" style="--index: 0">L</span>
+                  <span class="label-char" style="--index: 1">o</span>
+                  <span class="label-char" style="--index: 2">n</span>
+                  <span class="label-char" style="--index: 3">g</span>
+                  <span class="label-char" style="--index: 4">i</span>
+                  <span class="label-char" style="--index: 5">t</span>
+                  <span class="label-char" style="--index: 6">u</span>
+                  <span class="label-char" style="--index: 7">d</span>
+                  <span class="label-char" style="--index: 8">e</span>
+                </label> -->
+              </div>
+            </div>
         </div>
       </div>
     </div>
   </div>
   </div>
+
+
 
 
   <div class="container-fluid text-center">
