--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
   <div class="search-header container-fluid ">
     <div class="search-header__wrapper">
-      <input placeholder="Search"  id="location-input" type="text" />
-      <button  id="search-button"  >
+      <input placeholder="Search" id="location-input" type="text" />
+      <button id="search-button">
         Search
       </button>
     </div>
@@ -44,7 +44,7 @@
 
       <div class="forecast ">
         <ul>
-          <li><span>Today</span> <span>☀️ Sunny</span>
+          <li><span>Today</span> <span id="urlp2">☀️ Sunny</span>
             <p id="date"></p>
           </li>
           <li><span>Mon</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
@@ -71,7 +71,6 @@
   <h2 class="mt-5"> Current Weather</h2>
 
 
- 
   <div class="container-fluid">
     <div class="wheatherUpdate mt-5 container-fluid m-lg-auto m-md-auto m-sm-auto ">
       <div class="WUpdate container-fluid m-lg-auto m-md-auto m-sm-auto ">
@@ -270,13 +269,11 @@
                 </label> -->
               </div>
             </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  </div>
-
-
 
 
   <div class="container-fluid text-center">
@@ -349,8 +346,9 @@
 
 
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="app.js"></script>
-  
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
