--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <body class="body">
 
+  <!-- Video Background -->
+  <video autoplay muted loop id="background-video">
+    <source src="Wether img/extra bg.mp4" type="video/mp4">
+  </video>
+
   <h1 class="mt-5">Weather</h1>
 
   <div class="search-header container-fluid ">
