--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
           <li><span>Today</span> <span id="urlp2">☀️ Sunny</span>
             <p id="date"></p>
           </li>
-          <li><span>Mon</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-          <li><span>Tue</span> <span>☁️ Cloud</span> <span>18/10/2024</span></li>
-          <li><span>Wed</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-          <li><span>Thu</span> <span>⛈️ Storm</span> <span>18/10/2024</span></li>
-          <li><span>Fri</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
-          <li><span>Sat</span> <span>☀️ Sunny</span> <span>18/10/2024</span></li>
+          <li><span>Mon</span> <span>☀️ Sunny</span> <span>2024-11-4</span></li>
+          <!-- <li><span>Tue</span> <span>☁️ Cloud</span> <span>18/10/2024</span></li> -->
+          <li><span>Wed</span> <span>☀️ Sunny</span> <span>2024-11-6</span></li>
+          <li><span>Thu</span> <span>⛈️ Storm</span> <span>2024-11-7</span></li>
+          <li><span>Fri</span> <span>☀️ Sunny</span> <span>2024-11-8</span></li>
+          <li><span>Sat</span> <span>☀️ Sunny</span> <span>2024-11-9</span></li>
         </ul>
 
         <!-- calulating date & time -->
